[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/Minecraft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/O7csH4aWVFoUuA9U06clf4vXdIgjeeWp394HCAoDuOo.png" type="Texture" id=2]
[ext_resource path="res://Screens/MainScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
next_scene_path = "res://World.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="VBoxContainer"]
position = Vector2( 673.443, 426.853 )
scale = Vector2( 2.62664, 2.19951 )
texture = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 250 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 244.0
margin_top = 85.0
margin_right = 779.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 1 )
text = "Wumpus World"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 254.0
margin_right = 1024.0
margin_bottom = 604.0
rect_min_size = Vector2( 0, 350 )
alignment = 1

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 1024.0
margin_bottom = 131.0
rect_min_size = Vector2( 0, 80 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/VBoxContainer/TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.7579
margin_bottom = 32.7579
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Play[/center]"
tab_size = 5
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 1024.0
margin_bottom = 215.0
rect_min_size = Vector2( 0, 80 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/VBoxContainer/TextureButton3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.7579
margin_bottom = 32.7579
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Simulate[/center]"
tab_size = 5
text = "Simulate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 219.0
margin_right = 1024.0
margin_bottom = 299.0
rect_min_size = Vector2( 0, 80 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/VBoxContainer/TextureButton2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 37.7976
margin_bottom = 37.7976
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Quit[/center]"
tab_size = 5
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/TextureButton3" to="." method="_on_TextureButton3_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/VBoxContainer/TextureButton3" to="." method="_on_TextureButton3_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
